# web-search-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  FASTAPI_MIGRATION.md  GOOGLE_VERTEX_AI_GUIDE.md  MIGRATION_COMPLETE.md  README.md  SESSION_MEMORY_FIX.md  STRUCTURED_OUTPUTS_GUIDE.md  VERTEX_AI_NEXT_STEPS.md  VERTEX_AI_SETUP.md  app.py  fastapi_app.py  index.html  install_uv.sh  main.py  pyproject.toml  quick_test.py  requirements.txt  run.sh  run_fastapi.sh  setup_gcloud.sh  test_fastapi.py  test_gemini_2_5_lite.py  test_google_search_grounding.py  test_memory.py  test_real_project.py  test_session_memory.py
static/: script.js  style.css
