[project]
name = "web-search-chatbot"
version = "0.2.0"
description = "A high-performance chatbot that searches the web, scrapes content, and provides AI-powered responses using FastAPI, Azure OpenAI, and Google AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.0.0",  # Required for session middleware
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "openai>=1.42.0",
    "python-dotenv>=1.0.0",
    "googlesearch-python>=1.2.3",
    "pydantic>=2.8.2",
    "google-cloud-aiplatform>=1.97.0",
    "google-auth>=2.40.3",
    "google-genai>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "httpx>=0.27.0",  # For testing FastAPI endpoints
    "pytest-asyncio>=0.25.0",  # For async tests
]
